# graphs

./: .gitmodules  CMakeLists.txt  interface.hpp
app/: example.cpp  generate_gnm.cpp  generate_grid.cpp  generate_grid3d.cpp  generate_rgg.cpp  generate_rhg.cpp  generate_rmat.cpp  process_file.cpp  read_sort_write.cpp  read_weighted_binary_file.cpp  redistribute.cpp
include/: edge_types.hpp  memory_utils.hpp  template_functions.hpp  utils.hpp  weight_generators.hpp
scripts/: add_back_edges.sh  out
scripts/test_backup/: in.txt  in2.txt
src/: generate_gnm.cpp  generate_grid.cpp  generate_rgg.cpp  generate_rhg.cpp  generate_rmat.cpp  read_and_process_from_file.cpp  read_from_file.cpp  redistribute.cpp  utils.cpp
